# xbkj_ros2_ws

./: blue.txt  debug_transform.py  deep_diag.py  final_diag.py  green.txt  red.txt
install/: local_setup.sh  setup.sh
install/deptrum-ros-driver-aurora930/lib/: libdeptrum_stream_aurora900.so.1.1.19
log/: latest_build
src/deptrum-ros-driver-aurora930/rviz/: aurora_pointcloud.rviz
src/my_launch_pkg/: package.xml  setup.py
src/my_launch_pkg/launch/: depth_arm.launch.py  nav2.launch.py
src/my_srv/: CMakeLists.txt
src/my_srv/config/: camera_intrinsics.yaml  hand_eye_calib.yaml
src/my_srv/launch/: depth_arm.launch.py  function.launch.py  slave.launch.py
src/my_srv/scripts/: arm_fk.py  arm_rviz_bridge.py  arm_teach.py  asr_node.py  blue.txt  color_set_node.py  color_sorting_node.py  color_stack_node.py  color_track_node.py  depth_arm.launch.py  depth_color_sorting_node.py  depth_color_stack_node.py  depth_color_track_node.py  depth_distance_node.py  depth_label_sorting_node.py  depth_label_stack_node.py  depth_label_track_node.py  depth_num_sorting_node.py  depth_num_stack_node.py  depth_num_track_node.py  depth_utils.py  diagnose_hand_eye.py  eye_in_hand_calib_node.py  face_track_node.py  glove_node.py  green.txt  hand_gesture_arm_node.py  joy_arm_node.py  lab_tuner.py  label_sorting_node.py  label_stack_node.py  label_track_node.py  num_sorting_node.py  num_stack_node.py  num_track_node.py  red.txt  servo_node.py  test.py  z_move.py  z_move.py.bak  (+1 more)
src/my_srv/srv/: Add.srv
src/my_srv/web/: index.html
src/py_pkg/: setup.py  test_copy
src/py_pkg/py_pkg/: serial_bridge.py
src/voice_interaction/: setup.py  在线语音交互实施方案分析.md  相机检测与节点路由方案.md  语音交互系统深度分析.md
src/voice_interaction/config/: voice_params.yaml
src/voice_interaction/voice_interaction/: intent_parser_node.py  (+1 more)
(+195 files in other folders)
